--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "react-use-draggable-scroll": "^0.4.7",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3",
