--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.1",
     "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.1.0",
     "react-icons": "^4.8.0",
     "react-phone-input-2": "^2.15.1",
