--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
     "react-countup": "^6.4.2",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.10.1",
     "react-phone-input-2": "^2.15.1",
