--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countup": "^6.4.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.1.0",
+    "react-flip-numbers": "^3.0.8",
     "react-icons": "^4.10.1",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.7",
